refactor : 가독성이 낮은 메소드 내용 직관적으로 변경