@@ -1,8 +1,6 @@
 package racingcar.model;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import racingcar.vo.CarDistance;
 import racingcar.vo.CarName;
 
@@ -18,16 +16,14 @@ public class Referee {
 
     public void decideWinner(final List<Car> carList) {
         CarDistance maxDistance = getMaxDistance(carList);
-        List<CarName> winners = getWinnerNames(carList, maxDistance);
-
-        this.winnerNames = Collections.unmodifiableList(winners);
+        this.winnerNames = getWinnerNames(carList, maxDistance);
     }
 
     private List<CarName> getWinnerNames(List<Car> carList, CarDistance maxDistance) {
         return carList.stream()
                 .filter(car -> car.getCarDistance().distance() == maxDistance.distance())
                 .map(car -> car.getCarName())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private CarDistance getMaxDistance(List<Car> carList) {
